[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprintes/player/jump.png" type="Texture" id=1]
[ext_resource path="res://sprintes/player/run0.png" type="Texture" id=2]
[ext_resource path="res://sprintes/player/run1.png" type="Texture" id=3]
[ext_resource path="res://sprintes/player/run2.png" type="Texture" id=4]
[ext_resource path="res://sprintes/player/run3.png" type="Texture" id=5]
[ext_resource path="res://sprintes/player/rit.png" type="Texture" id=6]
[ext_resource path="res://app/player/player.gd" type="Script" id=7]
[ext_resource path="res://sprintes/player/queimando/queimando0.png" type="Texture" id=8]
[ext_resource path="res://sprintes/player/queimando/queimando3.png" type="Texture" id=9]
[ext_resource path="res://sprintes/player/queimando/queimando2.png" type="Texture" id=10]
[ext_resource path="res://sprintes/player/queimando/queimando4.png" type="Texture" id=11]
[ext_resource path="res://sprintes/player/queimando/queimando1.png" type="Texture" id=12]
[ext_resource path="res://app/player/AnimatedSprite.gd" type="Script" id=13]
[ext_resource path="res://som/hit.wav" type="AudioStream" id=15]
[ext_resource path="res://som/jump.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": false,
"name": "queimando",
"speed": 15.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 15.0

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "run"
playing = true
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -14.553 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -14.553 )
shape = SubResource( 2 )

[node name="jump_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="hit_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="animation_finished" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
